more abcdc clean-up

--- a/abcdc/awgn.tex
+++ b/abcdc/awgn.tex
@@ -1311,7 +1311,7 @@ Then the {\bf probability of detection error} is
 %---------------------------------------
 In an FSK modulation space, 
 the optimal ML estimator of $m$ is
-   \formbox{ \hat{m} = \arg\max_m \fdotr_m. }
+   \thmbox{ \hat{m} = \arg\max_m \fdotr_m. }
 \end{theorem}
 \begin{proof}
 \begin{align*}
@@ -1346,7 +1346,7 @@ If an FSK modulation space let
 \]
 
 Then the {\bf probability of detection error} is
-\formbox{
+\thmbox{
    \pP{\mbox{error}} 
      = 1 - \frac{M-1}{M} \int_0^\infty\int_0^\infty \cdots \int_0^\infty
                            \pdfp(z_2,z_3,\ldots,z_M) \; dz_2 dz_3 \cdots dz_M
@@ -2193,7 +2193,7 @@ Let the {\em signal to noise ratio} SNR be defined as
    \[ \snr[\fr(t)] \eqd \frac{|\inprod{\fs(t)}{\fx(t)}|^2}
                             {\pEb{|\inprod{\fn(t)}{\fx(t)}|^2}}. \]
 Then, $\snr[\fr(t)]$ is 
-\formbox{
+\thmbox{
   \snr[\fr(t)] \le \frac{2\norm{\fs(t)}^2}{N_o }
   }
 and is maximized (equality) when $\fx(t)=a\fs(t)$, where $a\in\R$.
@@ -2339,11 +2339,6 @@ That is, the optimal $h(t)$ is just a ``flipped" and shifted version of $\fs(t)$
    }
 \end{figure}
 
-
-
-
-
-
 \begin{figure}[ht] \color{figcolor}
 \begin{center}
 \begin{fsL}
@@ -2428,34 +2423,34 @@ it are obviously aware of time and are often referred to as
 \begin{theorem}
 %--------------------------------------
 Let $Z\sim\pN{0}{\sigma^2}$. Then
-\formbox{  \iH(Z) = \frac{1}{2}\log_2 2\pi e \sigma^2  }
+\thmbox{  \iH(Z) = \frac{1}{2}\log_2 2\pi e \sigma^2  }
 \end{theorem}
 \begin{proof}
-\begin{eqnarray*}
+\begin{align*}
   \iH(Z)
-    &=& \pEz \log \frac{1}{\pp(Z)}
-  \\&=& -\pEz \log \pp(z) 
-  \\&=& -\pEz
-         \log \left[\frac{1}{\sqrt{2\pi\sigma^2}}e^{\frac{-z^2}{2\sigma^2}} \right] 
-  \\&=& -\pEz \left[
-        -\frac{1}{2}\log(2\pi\sigma^2) 
-        + \frac{-z^2}{2\sigma^2} \log e 
-        \right] 
-  \\&=& \frac{1}{2} \pEz \left[
-        \log(2\pi\sigma^2) 
-        + \frac{\log e}{\sigma^2}z^2  
-        \right] 
-  \\&=& \frac{1}{2} \left[
-        \log(2\pi\sigma^2) + \frac{\log e}{\sigma^2}\pEz z^2  
-        \right] 
-  \\&=& \frac{1}{2} \left[
-        \log(2\pi\sigma^2) + \frac{\log e}{\sigma^2}(\sigma^2+0)
-        \right] 
-  \\&=& \frac{1}{2} \left[
-        \log(2\pi\sigma^2) + \log e
-        \right] 
-  \\&=& \frac{1}{2} \log(2\pi e\sigma^2) 
-\end{eqnarray*}
+    &= \pEz \log \frac{1}{\pp(Z)}
+  \\&= -\pEz \log \pp(z) 
+  \\&= -\pEz
+        \log \left[\frac{1}{\sqrt{2\pi\sigma^2}}e^{\frac{-z^2}{2\sigma^2}} \right] 
+  \\&= -\pEz \left[
+       -\frac{1}{2}\log(2\pi\sigma^2) 
+       + \frac{-z^2}{2\sigma^2} \log e 
+       \right] 
+  \\&= \frac{1}{2} \pEz \left[
+       \log(2\pi\sigma^2) 
+       + \frac{\log e}{\sigma^2}z^2  
+       \right] 
+  \\&= \frac{1}{2} \left[
+       \log(2\pi\sigma^2) + \frac{\log e}{\sigma^2}\pEz z^2  
+       \right] 
+  \\&= \frac{1}{2} \left[
+       \log(2\pi\sigma^2) + \frac{\log e}{\sigma^2}(\sigma^2+0)
+       \right] 
+  \\&= \frac{1}{2} \left[
+       \log(2\pi\sigma^2) + \log e
+       \right] 
+  \\&= \frac{1}{2} \log(2\pi e\sigma^2) 
+\end{align*}
 \end{proof}
 
 %--------------------------------------
@@ -2466,7 +2461,7 @@ Let $Z\sim\pN{0}{\sigma^2}$. Then
 %--------------------------------------
 Let $Y=X+Z$ be a Gaussian channel with $\pE X^2=P$ and
 $Z\sim\pN{0}{\sigma^2}$. Then
-\formbox{ 
+\thmbox{ 
   \iI(X;Y) \le \frac{1}{2}\log\left( 1 + \frac{P}{\sigma^2}\right) = \iC 
   %\hspace{1cm}\mbox{bits per usage}
   }
