--- a/abcdc/isi.tex
+++ b/abcdc/isi.tex
@@ -351,14 +351,16 @@ both constraints to be satisfied simultaneously.
 
 %--------------------------------------
 \begin{theorem}[Partition of unity criterion]
-\citep{proakis}{557}
+\footnote{
+  \citerp{proakis}{557}
+  }
 \label{thm:unity}
 \index{partition of unity criterion}
 %--------------------------------------
 Let $\ft{\hhcmp}(f)$ be the Fourier Transform of a function
 $\hhcmp(t)$ and $T\in\R$ a constant.
 Then
-\formbox{
+\thmbox{
   \left[
   \hhcmp(nT) =
   \left\{
@@ -430,10 +432,13 @@ which states
 %--------------------------------------
 \begin{definition}
 \label{def:chi}
+\footnote{
+  \citerp{ab}{126}
+  }
 \index{$\chi$ function}
 %--------------------------------------
 The {\bf characteristic function} $\chi_A:X\to\{0,1\}$ of set $A$ is defined as
-\citep{ab}{126}
+
 \defbox{
   \chi_A(x) \eqd
   \left\{
@@ -460,7 +465,9 @@ both of which are closely related to the partition of unity criterion:
 
 %--------------------------------------
 \begin{theorem}[Nyquist signaling theorem]
-\citep{proakis}{13}
+\footnote{
+  \citerp{proakis}{13}
+  }
 \index{Nyquist signaling theorem}
 \label{thm:nst}
 %--------------------------------------
@@ -497,7 +504,9 @@ which is a rectangular pulse in frequency domain given by
 
 %--------------------------------------
 \begin{theorem}[Shannon sampling theorem]
-\citep{proakis}{13}
+\footnote{
+  \citerp{proakis}{13}
+  }
 \index{Shannon sampling theorem}
 \label{thm:sst}
 %--------------------------------------
@@ -773,7 +782,7 @@ one of the most widely used signaling waveforms.\footnote{
   Note: The raised cosine is similar to the {\em Meyer wavelet}.
   ref: \cite[page 65]{vidakovic}
   }
-In the frequency domain it has the form\citep{proakis}{560}
+In the frequency domain it has the form\footnote{\citerp{proakis}{560}}
 \[
    \hhcmpf(f) =
    \left\{
@@ -861,7 +870,7 @@ That is, if $\ast$ is the convolution operation, then
 }
 \end{figure}
 
-All B-Splines form a partition of unity.\citep{goswami}{46}
+All B-Splines form a partition of unity.\footnote{\citerp{goswami}{46}}
 and their inverse Fourier Transforms may therefore be used
 as signaling waveforms $\hhcmp(t)$.
 %--------------------------------------
@@ -951,31 +960,30 @@ Each member of the family may be scaled by $2^m$
 and translated by $n$.
 There are many scaling and wavelet functions available.
 Most scaling functions $\phi$ satisfy
-the partition of unity criterion\citep{jawerth}{8} (???).  \attention
+the partition of unity criterion\footnote{\citerpc{jawerth}{8}{???}}.  \attention
 The inverse Fourier Transform of scaling functions may therefore
 be used as signaling waveforms.
-Some Daubechies scaling functions are shown in \prefpp{fig:dau}.
-
-\begin{figure}[ht]\color{figcolor}
-\begin{center}
-\begin{tabular}{ccccccccc}
-   %20171226%\epsfig{file=../common/20090604/common/wavelets/d1sc_x3125.eps,    height=3cm, width=3cm}  &
-   %20171226%\epsfig{file=../common/20090604/common/wavelets/d2sc_x3125.eps,    height=3cm, width=3cm}  &
-   %20171226%\epsfig{file=../common/20090604/common/wavelets/d3sc_x3125.eps,    height=3cm, width=3cm}  &
-   %20171226%\epsfig{file=../common/20090604/common/wavelets/d4sc_x3125.eps,    height=3cm, width=3cm}
-\\
-   Daubechies-2  &
-   Daubechies-4  &
-   Daubechies-8  &
-   Daubechies-16
-\end{tabular}
-\end{center}
-\caption{
-  Daubechies wavelets
-  \label{fig:dau}
-}
-\end{figure}
-
+%Some Daubechies scaling functions are shown in \prefpp{fig:dau}.
+%
+%\begin{figure}[ht]\color{figcolor}
+%\begin{center}
+%\begin{tabular}{ccccccccc}
+%   %20171226%\epsfig{file=../common/20090604/common/wavelets/d1sc_x3125.eps,    height=3cm, width=3cm}  &
+%   %20171226%\epsfig{file=../common/20090604/common/wavelets/d2sc_x3125.eps,    height=3cm, width=3cm}  &
+%   %20171226%\epsfig{file=../common/20090604/common/wavelets/d3sc_x3125.eps,    height=3cm, width=3cm}  &
+%   %20171226%\epsfig{file=../common/20090604/common/wavelets/d4sc_x3125.eps,    height=3cm, width=3cm}
+%\\
+%   Daubechies-2  &
+%   Daubechies-4  &
+%   Daubechies-8  &
+%   Daubechies-16
+%\end{tabular}
+%\end{center}
+%\caption{
+%  Daubechies wavelets
+%  \label{fig:dau}
+%}
+%\end{figure}
 
 One advantage of using wavelet zero-ISI waveforms is that a {\em fast wavelet transform}
 (FWT) is available requiring only order $\log n$ operations,
@@ -984,13 +992,6 @@ The availability of the FWT in addition to the wavelet's natural
 signal analysis capability, may allow the system to make further use of the
 incoming waveforms for channel estimation, channel equalization, and
 symbol detection.
-
-
-
-
-
-
-
 
 %=======================================
 \section{Duobinary ISI solution}
@@ -1149,8 +1150,6 @@ which states
    }
 \end{figure}
 
-
-
 The next theorem specifies a signaling waveform which satisfies the
 criterion at the Nyquist rate
 \[ W  = \frac{1}{2T}. \]
@@ -1200,56 +1199,55 @@ Then
 First, observe that $\ft{\hhcmp}(f)$ satisfies
 the criterion of \prefpp{thm:db_zeroISI}:
 
-\begin{eqnarray*}
+\begin{align*}
    \sum_n \ft{\hhcmp}\left( f + \frac{n}{T} \right)
-     &=& \sum_n 2T e^{-i\pi T\left(f+\frac{n}{T}\right)}
-         \cos\left[\pi T(f+\frac{n}{T})\right]
-         \chi_B\left(f+\frac{n}{T}\right)
-   \\&=& 2T \sum_n
-         e^{-i\pi Tf}
-         e^{-i\pi n }
-         \left[\cos(\pi Tf)\cos(\pi n)-\sin(\pi Tf)\sin(\pi n) \right]
-         \chi_B\left(f+\frac{n}{T}\right)
-   \\&=& 2T e^{-i\pi Tf} \sum_n
-         (-1)^n
-         \left[\cos(\pi Tf)(-1)^n -\sin(\pi Tf)\cdot0 \right]
-         \chi_B\left(f+\frac{n}{T}\right)
-   \\&=& 2T e^{-i\pi Tf} \sum_n
-         \cos(\pi Tf)
-         \chi_B\left(f+\frac{n}{T}\right)
-   \\&=& 2T e^{-i\pi Tf} \cos(\pi Tf) \sum_n
-         \chi_B\left(f+\frac{n}{T}\right)
-   \\&=& 2T e^{-i\pi Tf} \cos(\pi Tf)
+     &= \sum_n 2T e^{-i\pi T\left(f+\frac{n}{T}\right)}
+        \cos\left[\pi T(f+\frac{n}{T})\right]
+        \chi_B\left(f+\frac{n}{T}\right)
+   \\&= 2T \sum_n
+        e^{-i\pi Tf}
+        e^{-i\pi n }
+        \left[\cos(\pi Tf)\cos(\pi n)-\sin(\pi Tf)\sin(\pi n) \right]
+        \chi_B\left(f+\frac{n}{T}\right)
+   \\&= 2T e^{-i\pi Tf} \sum_n
+        (-1)^n
+        \left[\cos(\pi Tf)(-1)^n -\sin(\pi Tf)\cdot0 \right]
+        \chi_B\left(f+\frac{n}{T}\right)
+   \\&= 2T e^{-i\pi Tf} \sum_n
+        \cos(\pi Tf)
+        \chi_B\left(f+\frac{n}{T}\right)
+   \\&= 2T e^{-i\pi Tf} \cos(\pi Tf) \sum_n
+        \chi_B\left(f+\frac{n}{T}\right)
+   \\&= 2T e^{-i\pi Tf} \cos(\pi Tf)
    %\\&\iff& Equation~\ref{eq:db_II}.
-\end{eqnarray*}
+\end{align*}
 
 The signaling waveform $\hhcmp(t)$ can be found by taking
 the inverse Fourier Transform of $\ft{\hhcmp}(f)$:
 
-\begin{eqnarray*}
+\begin{align*}
    \hhcmp(t)
-     &=& [\opFTi\ft{\hhcmp}](t)
-   \\&=& \int_f \hhcmp(f) e^{i2\pi ft} \df
-   \\&=& \int_\frac{-1}{2T}^\frac{1}{2T}
-         2T e^{-i\pi Tf} \cos(\pi Tf) e^{i2\pi ft} \df
-   \\&=& 2T\int_\frac{-1}{2T}^\frac{1}{2T}
-         e^{-i\pi Tf}
-         \frac{1}{2}\left[ e^{i\pi Tf} + e^{-i\pi Tf}  \right]
-         e^{i2\pi ft} \df
-   \\&=& T\int_\frac{-1}{2T}^\frac{1}{2T}
-         \left[ 1 + e^{-i2\pi Tf}  \right]
-         e^{i2\pi ft} \df
-   \\&=& T\int_\frac{-1}{2T}^\frac{1}{2T}
-         e^{i2\pi ft} + e^{i2\pi(t-T)f} \df
-   \\&=& \left. T\frac{e^{i2\pi ft    }}{i2\pi t    } \right|_\frac{-1}{2T}^\frac{1}{2T}  +
-         \left. T\frac{e^{i2\pi f(t-T)}}{i2\pi (t-T)} \right|_\frac{-1}{2T}^\frac{1}{2T}
-   \\&=& \frac{e^{i\frac{\pi}{T}t    }-e^{-i\frac{\pi}{T}t    }}{i2\frac{\pi}{T} t    }   +
-         \frac{e^{i\frac{\pi}{T}(t-T)}-e^{-i\frac{\pi}{T}(t-T)}}{i2\frac{\pi}{T} (t-T)}
-   \\&=& \frac{\sin[\frac{\pi}{T}t]    }{\frac{\pi}{T} t    }   +
-         \frac{\sin[\frac{\pi}{T}(t-T)]}{\frac{\pi}{T} (t-T)}
-\end{eqnarray*}
+     &= [\opFTi\ft{\hhcmp}](t)
+   \\&= \int_f \hhcmp(f) e^{i2\pi ft} \df
+   \\&= \int_\frac{-1}{2T}^\frac{1}{2T}
+        2T e^{-i\pi Tf} \cos(\pi Tf) e^{i2\pi ft} \df
+   \\&= 2T\int_\frac{-1}{2T}^\frac{1}{2T}
+        e^{-i\pi Tf}
+        \frac{1}{2}\left[ e^{i\pi Tf} + e^{-i\pi Tf}  \right]
+        e^{i2\pi ft} \df
+   \\&= T\int_\frac{-1}{2T}^\frac{1}{2T}
+        \left[ 1 + e^{-i2\pi Tf}  \right]
+        e^{i2\pi ft} \df
+   \\&= T\int_\frac{-1}{2T}^\frac{1}{2T}
+        e^{i2\pi ft} + e^{i2\pi(t-T)f} \df
+   \\&= \left. T\frac{e^{i2\pi ft    }}{i2\pi t    } \right|_\frac{-1}{2T}^\frac{1}{2T}  +
+        \left. T\frac{e^{i2\pi f(t-T)}}{i2\pi (t-T)} \right|_\frac{-1}{2T}^\frac{1}{2T}
+   \\&= \frac{e^{i\frac{\pi}{T}t    }-e^{-i\frac{\pi}{T}t    }}{i2\frac{\pi}{T} t    }   +
+        \frac{e^{i\frac{\pi}{T}(t-T)}-e^{-i\frac{\pi}{T}(t-T)}}{i2\frac{\pi}{T} (t-T)}
+   \\&= \frac{\sin[\frac{\pi}{T}t]    }{\frac{\pi}{T} t    }   +
+        \frac{\sin[\frac{\pi}{T}(t-T)]}{\frac{\pi}{T} (t-T)}
+\end{align*}
 \end{proof}
-
 
 %--------------------------------------
 \subsection{Detection}
@@ -1313,7 +1311,7 @@ the algorithm described below and illustrated in
 %---------------------------------------
 \begin{lemma}
 %---------------------------------------
-\formbox{ (a+b)\mod = (a\mod + b\mod)\mod.}
+\lembox{ (a+b)\mod = (a\mod + b\mod)\mod}
 \end{lemma}
 \begin{proof}
 \[
@@ -1324,16 +1322,16 @@ the algorithm described below and illustrated in
   r_1+r_2 &=& Mq_4 + r_4   &\iff& (r_1+r_2)\mod &=& r_4
 \end{array}
 \]
-\begin{eqnarray*}
-%  (a+b) \mod
-%    &=& (Mq_1+r_1 + Mq_2 + r_2)\mod
-%  \\&=& [M(q_1+q_2) +r_1 + r_2]\mod
-%  \\&=& [M(q_1+q_2) +Mq_4+r_4]\mod
-%  \\&=& [M(q_1+q_2+q_4) +r_4]\mod
-%  \\&=& r_4
-%  \\&=& (r_1 + r_2)\mod
-%  \\&=& (a\mod + b\mod)\mod
-\end{eqnarray*}
+%\begin{eqnarray*}
+%%  (a+b) \mod
+%%    &=& (Mq_1+r_1 + Mq_2 + r_2)\mod
+%%  \\&=& [M(q_1+q_2) +r_1 + r_2]\mod
+%%  \\&=& [M(q_1+q_2) +Mq_4+r_4]\mod
+%%  \\&=& [M(q_1+q_2+q_4) +r_4]\mod
+%%  \\&=& r_4
+%%  \\&=& (r_1 + r_2)\mod
+%%  \\&=& (a\mod + b\mod)\mod
+%\end{eqnarray*}
 \end{proof}
 
 %---------------------------------------
@@ -1351,13 +1349,13 @@ Let
    S_n   &\eqd& \sum_{k=-\infty}^n (-1)^{n-k} u_k.
 \end{eqnarray*}
 Then
-\formbox{
+\thmbox{
   r_n|u_n,S_{n-1} =
   2\Big[ [u_n\mod + (- S_{n-1})\mod]\mod + S_{n-1}\mod - (M - 1) \Big] + n_n
   }
 
 If $\fn(t)$ is a white Gaussian random process, then
-\formbox{
+\thmbox{
   r_n \sim \pN
     {2\Big[ [u_n\mod + (- S_{n-1})\mod]\mod + S_{n-1}\mod - (M - 1) \Big]}
     {\sigma^2}
@@ -1366,15 +1364,15 @@ If $\fn(t)$ is a white Gaussian random process, then
 \begin{proof}
 
 The sequence $\{y_n\}$ is the precoded sequence:
-\begin{eqnarray*}
+\begin{align*}
    y_n
-     &=& \left( u_n - y_{n-1} \right)\mod
-   \\&=& \left[ u_n - (u_{n-1}-y_{n-2}) \right]\mod
-   \\&=& \left( u_n - u_{n-1} + u_{n-2}-y_{n-3} \right)\mod
-   \\&=& \left( u_n - u_{n-1} + u_{n-2}-u_{n-3}+y_{n-4} \right)\mod
-   \\&=& \left( \sum_{k=-\infty}^n (-1)^{n-k} u_k \right)\mod
-   \\&=& S_n \mod
-\end{eqnarray*}
+     &= \left( u_n - y_{n-1} \right)\mod
+   \\&= \left[ u_n - (u_{n-1}-y_{n-2}) \right]\mod
+   \\&= \left( u_n - u_{n-1} + u_{n-2}-y_{n-3} \right)\mod
+   \\&= \left( u_n - u_{n-1} + u_{n-2}-u_{n-3}+y_{n-4} \right)\mod
+   \\&= \left( \sum_{k=-\infty}^n (-1)^{n-k} u_k \right)\mod
+   \\&= S_n \mod
+\end{align*}
 
 A mapping is performed on each $y_n$ to produce $a_n$:
 \[ a_n = 2y_n - M + 1.\]
@@ -1386,36 +1384,36 @@ rate $1/T$:
 
 
 Before going further, here is a useful relation:
-\begin{eqnarray*}
+\begin{align*}
   S_n
-    &\eqd& \sum_{k=-\infty}^{n} (-1)^{n-k} u_k
-  \\&=&    u_n + \sum_{k=-\infty}^{n-1} (-1)^{n-k} u_k
-  \\&=&    u_n - \sum_{k=-\infty}^{n-1} (-1)(-1)^{n-k} u_k
-  \\&=&    u_n - \sum_{k=-\infty}^{n-1} (-1)^{-1}(-1)^{n-k} u_k
-  \\&=&    u_n - \sum_{k=-\infty}^{n-1} (-1)^{n-1-k} u_k
-  \\&\eqd& u_n - S_{n-1}
-\end{eqnarray*}
+    &\eqd \sum_{k=-\infty}^{n} (-1)^{n-k} u_k
+  \\&=    u_n + \sum_{k=-\infty}^{n-1} (-1)^{n-k} u_k
+  \\&=    u_n - \sum_{k=-\infty}^{n-1} (-1)(-1)^{n-k} u_k
+  \\&=    u_n - \sum_{k=-\infty}^{n-1} (-1)^{-1}(-1)^{n-k} u_k
+  \\&=    u_n - \sum_{k=-\infty}^{n-1} (-1)^{n-1-k} u_k
+  \\&\eqd u_n - S_{n-1}
+\end{align*}
 
 
 The received signal samples $\fr_n$ are as follows:
-\begin{eqnarray*}
+\begin{align*}
    \fr_n
-     &=& \left. \fr(t) \right|_{t=nT}
-   \\&=& \left[ \fs(t) + n(t) \right]_{t=nT}
-   \\&=& \left[ \sum_m a_n \hhcmp(t-mT) + n(t) \right]_{t=nT}
-   \\&=& \sum_m a_m \hhcmp(nT-mT) + n(nT)
-   \\&=& a_n\hhcmp(0) + a_{n-1}\hhcmp(T) + n_n
-   \\&=& a_n + a_{n-1} + n_n
-   \\&=& \left( 2y_n - M + 1 \right) + \left(2y_{n-1} - M + 1 \right) + n_n
-   \\&=& 2\left( y_n + y_{n-1} - M + 1 \right) + n_n
-   \\&=& 2\left[
-           \left( \sum_{k=-\infty}^n (-1)^{n-k} u_k \right)\mod +
-           \left( \sum_{k=-\infty}^{n-1} (-1)^{n-1-k} u_k \right)\mod
-           - M + 1 \right] + n_n
-   \\&=& 2\Big[ S_n\mod + S_{n-1}\mod - M + 1 \Big] + n_n
-   \\&=& 2\Big[ (u_n - S_{n-1})\mod + S_{n-1}\mod - (M - 1) \Big] + n_n
-   \\&=& 2\Big[ [u_n\mod + (- S_{n-1})\mod]\mod + S_{n-1}\mod - (M - 1) \Big] + n_n
-\end{eqnarray*}
+     &= \left. \fr(t) \right|_{t=nT}
+   \\&= \left[ \fs(t) + n(t) \right]_{t=nT}
+   \\&= \left[ \sum_m a_n \hhcmp(t-mT) + n(t) \right]_{t=nT}
+   \\&= \sum_m a_m \hhcmp(nT-mT) + n(nT)
+   \\&= a_n\hhcmp(0) + a_{n-1}\hhcmp(T) + n_n
+   \\&= a_n + a_{n-1} + n_n
+   \\&= \left( 2y_n - M + 1 \right) + \left(2y_{n-1} - M + 1 \right) + n_n
+   \\&= 2\left( y_n + y_{n-1} - M + 1 \right) + n_n
+   \\&= 2\left[
+          \left( \sum_{k=-\infty}^n (-1)^{n-k} u_k \right)\mod +
+          \left( \sum_{k=-\infty}^{n-1} (-1)^{n-1-k} u_k \right)\mod
+          - M + 1 \right] + n_n
+   \\&= 2\Big[ S_n\mod + S_{n-1}\mod - M + 1 \Big] + n_n
+   \\&= 2\Big[ (u_n - S_{n-1})\mod + S_{n-1}\mod - (M - 1) \Big] + n_n
+   \\&= 2\Big[ [u_n\mod + (- S_{n-1})\mod]\mod + S_{n-1}\mod - (M - 1) \Big] + n_n
+\end{align*}
 
 Thus, $(r_n|u_n,S_{n-1})$ have Gaussian distribution with means
 \[ \Eb{r_n|u_n,S_n} =  2\left[
@@ -1430,12 +1428,12 @@ $S_{n-1}$ is because the values $\Eb{r_n|u_n}$ are
 always distinct from the values $\Eb{r_m|v_m}$
 if $u_n\ne v_n$.
 That is
-\begin{eqnarray*}
-   && (u_n\ne v_n)\implies
- \\&&
+\begin{align*}
+   & (u_n\ne v_n)\implies
+ \\&
    \Eb{r_n|u_n,S_{n-1}} \ne \Eb{r_n|v_n,S_{n-1}}
-   \hspace{3ex}\forall S_{n-1}
-\end{eqnarray*}
+   && \forall S_{n-1}
+\end{align*}
 
 For ML optimization, we are interested in the distributions
 $\pp(r_n|u_n)$.
@@ -1444,23 +1442,22 @@ If we assume that all values of $S_{n-1}\in\{0,1,\ldots,M-1\}$
 are equally likely, we can convert from the latter to the
 former by the relation:
 
-\begin{eqnarray*}
+\begin{align*}
    \pp(r_n|u_n)
-      &=& \frac{\pp(r_n,u_n)}{\pp(u_n)}
-    \\&=& \frac{\pp(u_n|r_n)\pp(r_n)}
-               {\pp(u_n)}
-    \\&=& \frac{\pp(u_n|r_n)\pp(r_n)}
-               {\pp(u_n)}
-    \\&=& \frac{\sum_{s=0}^{M-1}\pp(u_n,S_{n-1}=s|r_n)\pp(r_n)}
-               {\pp(u_n)}
-    \\&=& \frac{\sum_{s=0}^{M-1}\pp(r_n|u_n,S_{n-1}=s)\pp(r_n)\pp(u_n,S_{n-1})}
-               {\pp(u_n)\pp(r_n)}
-    \\&=& \frac{\sum_{s=0}^{M-1}\pp(r_n|u_n,S_{n-1}=s)\pp(u_n)\pp(S_{n-1})}
-               {\pp(u_n)}
-    \\&=& \sum_{m=0}^{M-1}\pp(r_n|u_n,S_{n-1}=m)\pp(S_{n-1})
-    \\&=& \frac{1}{M}\sum_{m=0}^{M-1}\pp(r_n|u_n,S_{n-1}=m)
-\end{eqnarray*}
-
+      &= \frac{\pp(r_n,u_n)}{\pp(u_n)}
+    \\&= \frac{\pp(u_n|r_n)\pp(r_n)}
+              {\pp(u_n)}
+    \\&= \frac{\pp(u_n|r_n)\pp(r_n)}
+              {\pp(u_n)}
+    \\&= \frac{\sum_{s=0}^{M-1}\pp(u_n,S_{n-1}=s|r_n)\pp(r_n)}
+              {\pp(u_n)}
+    \\&= \frac{\sum_{s=0}^{M-1}\pp(r_n|u_n,S_{n-1}=s)\pp(r_n)\pp(u_n,S_{n-1})}
+              {\pp(u_n)\pp(r_n)}
+    \\&= \frac{\sum_{s=0}^{M-1}\pp(r_n|u_n,S_{n-1}=s)\pp(u_n)\pp(S_{n-1})}
+              {\pp(u_n)}
+    \\&= \sum_{m=0}^{M-1}\pp(r_n|u_n,S_{n-1}=m)\pp(S_{n-1})
+    \\&= \frac{1}{M}\sum_{m=0}^{M-1}\pp(r_n|u_n,S_{n-1}=m)
+\end{align*}
 
 %--------------------------------------
 \subsubsection{Detection in the case $M=2$}
@@ -1484,8 +1481,6 @@ This gives distributions  (see \prefpp{fig:db_pdf_M=2})
                       \frac{1}{2}\pN{ 2}{\sigma^2} \\
    (r_n|u_n=1) &\sim&            \pN{ 0}{\sigma^2}.
 \end{eqnarray*}
-
-
 
 \begin{figure}[ht]\color{figcolor}
 \begin{center}
@@ -1529,8 +1524,6 @@ This gives distributions  (see \prefpp{fig:db_pdf_M=2})
    \label{fig:db_pdf_M=2}
    }
 \end{figure}
-
-
 
 %--------------------------------------
 \subsubsection{Detection in the case $M=4$}
@@ -1640,10 +1633,6 @@ This gives distributions (see \prefpp{fig:db_pdf_M=4})
    }
 \end{figure}
 
-
-
-
-
 %=======================================
 \section{Modified Duobinary ISI solution}
 \index{modified duobinary}
@@ -1704,10 +1693,7 @@ in \prefpp{thm:mdb_zeroISI} is met.
 %--------------------------------------
 Let $\ft{\hhcmp}(f)$ be the Fourier Transform of a function
 $\hhcmp(t)$ and $T\in\R$ a constant.
-Then
-
-
-\formbox{
+\thmbox{
    \bs{
    \hhcmp(nT) =
    \left\{
@@ -1837,7 +1823,7 @@ The waveform $\hhcmp(t)$ with Fourier transform $\ft{\hhcmp}(f)$
 satisfies the criterion stated in \prefpp{thm:mdb_zeroISI},
 where
 
-\formbox{\begin{array}{rcl}
+\thmbox{\begin{array}{rcl}
    \ft{\hhcmp}(f) &=& \left\{
    \begin{array}{ll}
       \ds i2T\sin(2\pi fT) & : \frac{-1}{2T} \le f < \frac{1}{2T} \\
@@ -1922,5 +1908,3 @@ the inverse Fourier Transform of $\ft{\hhcmp}(f)$:
         \frac{\sin[\frac{\pi}{T}(t-T)]} {\frac{\pi}{T} (t-T)}
 \end{align*}
 \end{proof}
-
-
