--- a/abcdc/mpath.tex
+++ b/abcdc/mpath.tex
@@ -492,26 +492,26 @@ Then
 The following proof fails (diverges).
 However I still include it here anyway.
 Maybe someone can show me what I did wrong:
-\begin{eqnarray*}
+\begin{align*}
   \Eb{ \Fh(\tau;\lambda_1) \Fh^\ast(\tau;\lambda_2) }
-    &=& \Eb{ \Fh(\tau;\lambda_1) \Fh^\ast(\tau;\lambda_2) }
-  \\&=& \Eb{   \int_t \fh(\tau;t) e^{-i2\pi\lambda_1 t} \dt
-        \left( \int_u \fh(\tau;u) e^{-i2\pi\lambda_2 u} \du \right)^\ast
-        }
-  \\&=& \Eb{ \int_t \fh     (\tau;t) e^{-i2\pi\lambda_1 t} \dt
-             \int_u \fh^\ast(\tau;u) e^{ i2\pi\lambda_2 u} \du 
-        }
-  \\&=& \int_t \int_u  \Eb{ \fh(\tau;t) \fh^\ast(\tau;u) }
-             e^{-i2\pi\lambda_1t} e^{ i2\pi\lambda_2u} \du \dt 
-  \\&=& \int_t \int_u  \Eb{ \fh(\tau;u+\delt) \fh^\ast(\tau;u) }
-             e^{-i2\pi\lambda_1(u+\delt)} e^{ i2\pi\lambda_2u} \du \dt 
-        \hspace{1cm}\delt=t-u \iff t=u+\delt
-  \\&=& \int_u \int_{\delt}  \Rhh(\tau;\delt)
-             e^{-i2\pi\lambda_1(u+\delt)} e^{ i2\pi\lambda_2u} \ddelt \du 
-  \\&=& \int_u e^{-i2\pi(\lambda_1-\lambda_2)u} \du 
-        \int_{\delt}  \Rhh(\tau;\delt) e^{-i2\pi\lambda_1\delt}  \ddelt 
-  \\&=& \delta(\lambda_1-\lambda_2)\Rtf(\tau;\lambda_1)
-\end{eqnarray*}
+    &= \Eb{ \Fh(\tau;\lambda_1) \Fh^\ast(\tau;\lambda_2) }
+  \\&= \Eb{   \int_t \fh(\tau;t) e^{-i2\pi\lambda_1 t} \dt
+       \left( \int_u \fh(\tau;u) e^{-i2\pi\lambda_2 u} \du \right)^\ast
+       }
+  \\&= \Eb{ \int_t \fh     (\tau;t) e^{-i2\pi\lambda_1 t} \dt
+            \int_u \fh^\ast(\tau;u) e^{ i2\pi\lambda_2 u} \du 
+       }
+  \\&= \int_t \int_u  \Eb{ \fh(\tau;t) \fh^\ast(\tau;u) }
+            e^{-i2\pi\lambda_1t} e^{ i2\pi\lambda_2u} \du \dt 
+  \\&= \int_t \int_u  \Eb{ \fh(\tau;u+\delt) \fh^\ast(\tau;u) }
+            e^{-i2\pi\lambda_1(u+\delt)} e^{ i2\pi\lambda_2u} \du \dt 
+       \hspace{1cm}\delt=t-u \iff t=u+\delt
+  \\&= \int_u \int_{\delt}  \Rhh(\tau;\delt)
+            e^{-i2\pi\lambda_1(u+\delt)} e^{ i2\pi\lambda_2u} \ddelt \du 
+  \\&= \int_u e^{-i2\pi(\lambda_1-\lambda_2)u} \du 
+       \int_{\delt}  \Rhh(\tau;\delt) e^{-i2\pi\lambda_1\delt}  \ddelt 
+  \\&= \delta(\lambda_1-\lambda_2)\Rtf(\tau;\lambda_1)
+\end{align*}
 \end{proof}
 %======================================
 \section{Profile functions}
