--- a/common/sty/physics.sty
+++ b/common/sty/physics.sty
@@ -72,8 +72,8 @@
 %--------------------------------------
 %20190903% \newcommand{\distsq}[2]{\metricn^2\brp{#1,\,#2}}
 %20190903% \newcommand{\FS}  [1]   {{\breve{\mathrm{#1}}}}
-%20190903% \newcommand{\delt}[1][t]{{{{\Delta{#1}}}}}
-%20190903% \newcommand{\delf}[0]   {\delt[f]}
+\newcommand{\delt}[1][t]{{{{\Delta{#1}}}}}
+\newcommand{\delf}[0]   {\delt[f]}
 %20190903% \newcommand{\ue} {\hat{u}}    %
 %20190903% \newcommand{\su}   [1][n] {\seq{u}{#1}}    % 
 %20190903% \newcommand{\sy}   [1][n] {\seq{y}{#1}}    % 
